# Text-Visualizer

./: CMakeLists.txt  README.md  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  main.cpp  text_interpreter.cpp  text_interpreter.h
